<resources>
    <string name="app_name">AppICoclear</string>
    <string name="play">play</string>
    <string name="play_sounds">Play sounds</string>
    <string name="sounds_of_animals">Sounds of animals</string>
    <string name="guepardo">Guepardo</string>
    <string name="leon">leon</string>
    <string name="mono">mono</string>
    <string name="perro">perro</string>
    <string name="puma">puma</string>
    <string name="oso">oso</string>
    <string name="send">Send</string>
    <string name="tipo_de_problema">Tipo De Problema</string>
    <string name="descripcion">Descripcion</string>
    <string name="ingrese_los_datos_del_paciente">Ingrese los datos del paciente</string>
    <string name="data_patient">Data Patient</string>
    <string name="Register">Registrar Paciente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
</resources>
