<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/main1"
              tools:context=".MainActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="573dp"
            android:layout_gravity="center"
            android:layout_weight="0">

        <LinearLayout
                android:layout_width="423dp"
                android:layout_height="459dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@android:dimen/app_icon_size"
                    android:text="@string/sounds_of_animals"/>


            <Button
                    android:id="@+id/play_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guepardo"/>
            <Button
                    android:id="@+id/play_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leon"/>
            <Button
                    android:id="@+id/play_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mono"/>
            <Button
                    android:id="@+id/play_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oso"/>
            <Button
                    android:id="@+id/play_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perro"/>
            <Button
                    android:id="@+id/play_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puma"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="459dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>


</LinearLayout>