<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="459dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">



        <!-- Name Label -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@android:dimen/app_icon_size"
                android:text="@string/ingrese_los_datos_del_paciente"/>

        <EditText android:id="@+id/name1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:hint="Nombre" />




        <EditText android:id="@+id/apell1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:hint="Apellido" />




        <EditText android:id="@+id/age"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="Edad"/>

        <EditText android:id="@+id/problem"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/tipo_de_problema"/>

        <EditText android:id="@+id/description"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:hint="@string/descripcion"/>


        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sendStore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/send"/>

    </LinearLayout>
</ScrollView>